--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/NIVELPRUEBAS.NIVELPRUEBAS
+EditorStartupMap=/Game/NIVELPRUEBAS.NIVELPRUEBAS
+GlobalDefaultGameMode=/Game/GameMode/BP_GeimMOD.BP_GeimMOD_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
